# Fluid

./: meson.build  meson_options.txt
examples/: example.gresources.xml  example.vala  meson.build  styles.css  window.ui
src/: fld-stack-menu.c  fld-stack-menu.h  fld-switcher.c  fld-switcher.h  fld-window.c  fld-window.h  fluid-version.h.in  fluid.h  meson.build
